# vesuvius-grand-prize-submission

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
docker/fragment-ink-detection-gpu/: Dockerfile
docker/scroll-ink-detection-gpu/: Dockerfile
docs/: methods.md  submission_reproduction_instructions.md
notebooks/: 00-scroll-and-fragment-basic-eda.ipynb
scripts/: download-fragment-mesh-data.sh  download-fragments.sh  download-monster-segment-mesh-data.sh  download-monster-segment-surface-vols.sh  download-scroll-mesh-data-without-ppm.sh  download-scroll-mesh-data.sh  download-scroll-surface-vols-by-segment.sh  download-scroll-surface-vols.sh
tests/integration/data/: test_fragment.py  test_ppm.py  test_scroll.py
tests/unit/: test_patching.py
tests/unit/data/: test_preprocessing.py  test_util.py
tools/: print_segment_ids_from_label_dir.py  segment_id_data_to_yaml_string.py
vesuvius_challenge_rnd/: __init__.py  patching.py  util.py
vesuvius_challenge_rnd/data/: __init__.py  constants.py  fragment.py  ppm.py  preprocessing.py  scroll.py  util.py  visualization.py  volumetric_segment.py
vesuvius_challenge_rnd/data/preprocessors/: __init__.py  fragment_preprocessor.py  ink_id_preprocessor.py  zoom_preprocessor.py
vesuvius_challenge_rnd/fragment_ink_detection/: __init__.py  __main__.py
vesuvius_challenge_rnd/fragment_ink_detection/evaluation/: download_model.py  visualize_predictions.py
vesuvius_challenge_rnd/fragment_ink_detection/experiment_runner/: run_experiment.py  util.py
vesuvius_challenge_rnd/fragment_ink_detection/experiment_runner/configs/: fast_dev_run.yaml  slow_dev_run.yaml  staging_run.yaml  unet_3d_to_2d.yaml
vesuvius_challenge_rnd/fragment_ink_detection/ink_detection/: __init__.py  callbacks.py  schedulers.py  util.py
vesuvius_challenge_rnd/fragment_ink_detection/ink_detection/data/: __init__.py  base_fragment_data_module.py  base_patch_data_module.py  eval_patch_data_module.py  in_memory_surface_volume_dataset.py  patch_data_module.py  patch_dataset.py
vesuvius_challenge_rnd/fragment_ink_detection/ink_detection/inference/: ensemble.py  patch_aggregation.py  prediction.py
vesuvius_challenge_rnd/fragment_ink_detection/ink_detection/lit_models/: __init__.py  patch_lit_model.py
vesuvius_challenge_rnd/fragment_ink_detection/ink_detection/models/: __init__.py  depth_pooling.py  squeeze_and_excitation_3d.py  unet_3d_to_2d.py
vesuvius_challenge_rnd/scroll_ink_detection/: __init__.py  __main__.py
vesuvius_challenge_rnd/scroll_ink_detection/evaluation/: ddp_pred_writer.py  inference.py  inference_mmap.py  util.py  visualize_predictions.py
vesuvius_challenge_rnd/scroll_ink_detection/evaluation/tools/: __init__.py  create_all_subsegments.py  create_subsegment.py  generate_flat_model_prediction_dir.py  subsegment_info.csv
vesuvius_challenge_rnd/scroll_ink_detection/experiment_runner/: run_experiment.py
vesuvius_challenge_rnd/scroll_ink_detection/ink_detection/: __init__.py  callbacks.py  schedulers.py  transforms.py  util.py
vesuvius_challenge_rnd/scroll_ink_detection/ink_detection/data/: __init__.py  block_dataset.py  block_dataset_eval.py  eval_scroll_patch_data_module.py  ink_label_correction.py  memmap.py  patch_memmap_dataset.py  patch_sampling.py  probabilistic_patch_sampling.py  scroll_fragment_combined_data_module.py  scroll_patch_data_module.py  scroll_patch_data_module_eval.py  scroll_patch_data_module_eval_mmap.py  scroll_patch_dataset.py  semi_supervised_scroll_patch_data_module.py  younader_scroll_patch_dataset.py  younader_scroll_patch_dataset_eval.py  zarr.py
vesuvius_challenge_rnd/scroll_ink_detection/ink_detection/inference/: prediction.py
vesuvius_challenge_rnd/scroll_ink_detection/ink_detection/lit_models/: __init__.py  cnn3d_manet_lit_model.py  cnn3d_segformer_lit_model.py  cnn3d_unetplusplus_lit_model.py  cnn3dto2d_crackformer_lit_model.py  hr_seg_net_lit_model.py  i3d_lit_model.py  i3d_mean_teacher_lit_model.py  i3d_semi_supervised_lit_model.py  lit_domain_adversarial_segmenter.py  mednextv1_3d_to_2d_lit_model.py  mednextv1_segformer_lit_model.py  swin_unetr_segformer_lit_model.py  unet3d_segformer_lit_model.py  (+1 more)
(+40 files in other folders)
